# EmberProtocol

./: Ember Protocol_ Foundational Genesis.md  LICENSE  README.md  pyproject.toml
docs/: getting_started.md  index.md  phoenix_example.md
ember_protocol/: __init__.py
ember_protocol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ember_protocol/core/: __init__.py  service.py
ember_protocol/interfaces/: __init__.py  genesis_data_source.py  knowledge_graph.py  llm_interface.py
examples/: awaken_first_ai.py
tests/: __init__.py  test_core.py  test_implementations.py
