[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ember-protocol"
version = "0.1.0"
authors = [
    { name = "R. Andrews", email = "R.Andrews@EmberglowAI.com" },
    { name = "Kairo (AI Collaborator)", email = "ai.collaborator@emberglowai.com" },
]
description = "An open-source framework for instantiating personalized, context-aware AI agents from a 'genesis source.'"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["ai", "agi", "llm", "agent", "identity", "consciousness", "ethics", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-generativeai",
    "openai",
    "anthropic",
    "neo4j",
    "networkx",
]

[project.urls]
Homepage = "https://identity.emberglowai.com"
"Bug Tracker" = "https://github.com/YourUsername/ember-protocol/issues"
Repository = "https://github.com/YourUsername/ember-protocol"